--- a/src/booknaviger/readinterface/ReadInterface.form
+++ b/src/booknaviger/readinterface/ReadInterface.form
@@ -412,9 +412,9 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          <EmptySpace min="0" pref="500" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Component id="readInterfaceScrollPane" alignment="0" pref="400" max="32767" attributes="0"/>
+              <Component id="readInterfaceScrollPane" alignment="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
